[package]
name = "wiz"
version = "0.0.1"
authors = ["Kenneth Wilke <kenneth.wilke@gmail.com>"]
edition = "2021"
description = "A management tool for logic design tinkering"
readme = "README.md"
repository = "https://github.com/KennethWilke/wiz"
license = "MIT"

[dependencies]
tera = "1"
toml_edit = "0.14.4"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
lazy_static = "1.4.0"
clap = { version = "3.2.17", features = ["derive"] }
anyhow = "1.0.62"
num_cpus = "1.13.1"
